package com.uff.espaco_aluno.utils.enums;

public enum StudentType {
    ENGAGED,
    OBSERVER;
}
